--- a/components/main/Main.module.css
+++ b/components/main/Main.module.css
@@ -6,15 +6,11 @@
     background-color: #FFF;
     padding: .3rem;
     border-radius: .3rem;
-    border-bottom: 1px solid #eee;
+    border: 1px solid #eee;
 }
 
 .right {
-    background-color: #FFF;
     margin-left: .5rem;
-    padding: .3rem;
-    border-radius: .3rem;
-    border-bottom: 1px solid #eee;
 }
 
 .title {
