--- a/components/main/detail-nav/DetailNav.module.css
+++ b/components/main/detail-nav/DetailNav.module.css
@@ -1,5 +1,5 @@
 .detailNav {
-    text-align: center;
+/*    text-align: center;*/
     padding: 1rem;
     background-color: #FFF;
     border: 1px solid #eee;
