--- a/components/main/Main.module.css
+++ b/components/main/Main.module.css
@@ -1,31 +1,14 @@
 .main {
-    margin-top: .5rem;
+    margin-top: 1rem;
 }
 
 .left {
     background-color: #FFF;
-    padding: .3rem;
+    padding: 1rem;
     border-radius: .3rem;
     border: 1px solid #eee;
 }
 
 .right {
-    margin-left: .5rem;
-}
-
-.title {
-    font-size: 1.3rem;
-    color: #1e90ff;
-    padding: 0 0.5rem;
-}
-
-.context {
-    color: #777;
-    padding: .5rem;
-}
-
-.icon {
-    margin-left: .5rem;
-    padding: .5rem 0;
-    color: #AAA;
+    margin-left: 1rem;
 }
