--- a/components/main/advert/Advert.module.css
+++ b/components/main/advert/Advert.module.css
@@ -3,9 +3,9 @@
 }
 
 .item {
-    margin-top: .5rem;
+    background-color: #fff;
+    margin-top: 1rem;
     padding: 1rem;
-    background-color: #FFF;
     border: 1px solid #eee;
     border-radius: .3rem;
 }
