--- a/components/main/detail/Detail.module.css
+++ b/components/main/detail/Detail.module.css
@@ -20,3 +20,41 @@
     padding: 1.3rem;
     font-size: 1rem;
 }
+
+.content h1 {
+    font-size: 30px;
+}
+
+.content h2 {
+    font-size: 28px;
+    border-bottom: 1px solid #cbcbcb;
+}
+
+.content h3 {
+    font-size: 24px;
+}
+
+.content pre {
+    display: block;
+    background-color: #f0f0f0;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.content pre > code {
+    color: #000;
+    background-color: #f0f0f0;
+}
+
+.content blockquote {
+    border-left: 4px solid #cbcbcb;
+    padding: 10px 10px 10px 30px;
+    background-color: #f8f8f8;
+}
+
+.content code {
+    background-color: #fff5f5;
+    border-radius: 5px;
+    margin: 0 3px;
+    color: #ff502c;
+}
