--- a/components/main/detail/Detail.module.css
+++ b/components/main/detail/Detail.module.css
@@ -1,5 +1,3 @@
-
-
 .title {
     font-size: 1.8rem;
     text-align: center;
@@ -36,14 +34,18 @@
 
 .content pre {
     display: block;
-    background-color: #f0f0f0;
-    padding: 5px;
-    border-radius: 5px;
+    background-color: #283646 !important;
+    padding: .5rem !important;
+    overflow-y: auto;
+    font-weight: 300;
+    font-family: Menlo, monospace;
+    border-radius: .3rem;
 }
 
 .content pre > code {
-    color: #000;
-    background-color: #f0f0f0;
+    border: 0 !important;
+    background-color: #283646 !important;
+    color: #FFF;
 }
 
 .content blockquote {
@@ -53,8 +55,13 @@
 }
 
 .content code {
-    background-color: #fff5f5;
-    border-radius: 5px;
+    display: inline-block;
+    background-color: #f3f3f3;
+    border: 1px solid #fdb9cc;
+    border-radius: 3px;
+    font-size: 0.9rem;
+    padding-left: 5px;
+    padding-right: 5px;
+    color: #4f4f4f;
     margin: 0 3px;
-    color: #ff502c;
 }
